landscape mode layout for main acitivity

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -38,10 +38,10 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_1"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
@@ -49,21 +49,21 @@
 
     <Button
         android:id="@+id/button0"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="70sp"
+        android:layout_height="50sp"
+        android:layout_marginStart="26dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_0"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonBS"
-        app:layout_constraintStart_toEndOf="@+id/button6" />
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintStart_toEndOf="@+id/buttonBS" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
@@ -71,10 +71,10 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_3"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
@@ -82,10 +82,10 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_4"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button7"
@@ -93,10 +93,10 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_5"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button8"
@@ -104,10 +104,10 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_6"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button9"
@@ -115,123 +115,139 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_7"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/button0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_8"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/button0"
         app:layout_constraintStart_toEndOf="@+id/button7" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_9"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/button0"
         app:layout_constraintStart_toEndOf="@+id/button8" />
 
     <Button
         android:id="@+id/buttonC"
         android:layout_width="50sp"
         android:layout_height="50dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_C"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/button0"
-        app:layout_constraintStart_toEndOf="@+id/button3" />
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
 
     <Button
         android:id="@+id/buttonPlus"
-        android:layout_width="145sp"
-        android:layout_height="45sp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="1.5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/button_Plus"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
-        app:layout_constraintStart_toEndOf="@+id/buttonEqual" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonMultiply"
-        android:layout_width="145sp"
-        android:layout_height="45sp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="1.5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/button_Multiply"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
-        app:layout_constraintStart_toEndOf="@+id/buttonEqual" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonMinus"
-        android:layout_width="145sp"
-        android:layout_height="45sp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="1.5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/button_Minus"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
-        app:layout_constraintStart_toEndOf="@+id/buttonEqual" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonDivide"
-        android:layout_width="145sp"
-        android:layout_height="45sp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="1.5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/button_Divide"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintStart_toEndOf="@+id/buttonDot" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonEqual"
-        android:layout_width="50sp"
-        android:layout_height="125dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="75sp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_Equal"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
-        app:layout_constraintStart_toEndOf="@+id/button0" />
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonDot"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/button_Dot"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintStart_toEndOf="@+id/button0" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonBS"
-        android:layout_width="50dp"
+        android:layout_width="50sp"
         android:layout_height="50dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/button_BS"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintStart_toEndOf="@+id/button9" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
 
 </android.support.constraint.ConstraintLayout>
